add: creado el endpoint de eliminar personas
