# src/controllers/persona.controller.js
@@ -9,7 +9,7 @@ router.get('/', async (req, res) => {
     const personas = await PersonaService.obtenerPersonas()
     res.json(personas)
   } catch (error) {
-    res.status(500).json({ mensaje: 'Error al obtener usuarios', error })
+    res.status(500).json({ message: 'Error al obtener usuarios', error })
   }
 })
 // trae la persona con un id en especifico
@@ -17,10 +17,27 @@ router.get('/:id', async (req, res) => {
   try {
     const { id } = req.params
     const persona = await PersonaService.obtenerPersonaPorId(id)
-    if (!persona) return res.status(404).json({ mensaje: 'usuario no encontrado' })
+    if (!persona) return res.status(404).json({ message: 'usuario no encontrado' })
     res.json(persona)
   } catch (error) {
-    res.status(500).json({ mensaje: 'Error al obtener usuario', error })
+    res.status(500).json({ message: 'Error al obtener usuario', error })
+  }
+})
+
+router.delete('/:id', async (req, res) => {
+  try {
+    const { id } = req.params
+    const persona = await PersonaService.obtenerPersonaPorId(id)
+    if (!persona) return res.status(404).json({ message: 'usuario no encontrado' })
+
+    const response = await PersonaService.eliminarPersona(id)
+    if (!response.success) {
+      return res.status(200).json({ message: response.message })
+    } else {
+      res.status(200).json({ message: response.message })
+    }
+  } catch (error) {
+    res.status(500).json({ message: 'Error del servidor' })
   }
 })
 
